サイトの日本語化とカスタマイズ

--- a/data/blog/release-of-tailwind-nextjs-starter-blog-v2.0.mdx
+++ b/data/blog/release-of-tailwind-nextjs-starter-blog-v2.0.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'Release of Tailwind Nextjs Starter Blog v2.0'
+title: 'LLMサーバの構築'
 date: '2023-08-05'
 lastmod: '2023-08-05'
-tags: ['next-js', 'tailwind', 'guide', 'feature']
+tags: ['LLM', 'DeepSeek:R1', 'LLMサーバ', 'feature']
 draft: false
-summary: 'Release of Tailwind Nextjs Starter Blog template v2.0, refactored with Nextjs App directory and React Server Components setup.Discover the new features and how to migrate from V1.'
+summary: '研究室でLLMサーバの構築を行いました。この記事ではLLMサーバの構築を行なった手順についてまとめていきます。'
 images: ['/static/images/twitter-card.png']
 ---
 
