--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,14 @@
 ---
-name: Tails Azimuth
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+name: s1m4ne
+avatar: /static/images/avatar.jpeg
+occupation: CS student
+company:
+email:
+twitter: https://twitter.com/s1m4ne
+linkedin:
+github: https://github.com/s1m4ne
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+情報系の大学生です。バックエンドやインフラなどに興味があります。
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+大学ではセキュリティを専攻していて、コンテナセキュリティと機械学習に関連する研究をしたいと思っています。
