--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -12,3 +12,7 @@ github: https://github.com/s1m4ne
 情報系の大学生です。バックエンドやインフラなどに興味があります。
 
 大学ではセキュリティを専攻していて、コンテナセキュリティと機械学習に関連する研究をしたいと思っています。
+
+Linuxやネットワーク、低レイヤーの知識があるエンジニアになりたいです。今の研究テーマも、Linuxに関連していて、モダン・最新の技術も扱えるようなテーマを探していた所、良さそうなテーマを見つけました。
+
+最近はアニメ、映画、MLB観戦、F1観戦、観葉植物などにハマってます。
