Prettierで整形する

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -15,4 +15,4 @@ github: https://github.com/s1m4ne
 
 Linuxやネットワーク、低レイヤーの知識があるエンジニアになりたいです。今の研究テーマも、Linuxに関連していて、モダン・最新の技術も扱えるようなテーマを探していた所、良さそうなテーマを見つけました。
 
-最近はアニメ、映画、MLB観戦、F1観戦、観葉植物などにハマってます。
+最近はMLB観戦、F1観戦、観葉植物、アニメ、映画、などにハマってます。
