コード整形

--- a/data/blog/2025-02-15-llm-load-factors.mdx
+++ b/data/blog/2025-02-15-llm-load-factors.mdx
@@ -2,7 +2,7 @@
 title: 'ローカル LLM の負荷要因に関するまとめ'
 date: '2025-02-15'
 lastmod: '2025-02-15'
-tags: ['LLM', 'GPUサーバ']
+tags: ['インフラ', 'LLM', 'GPUサーバ']
 draft: false
 summary: 'ローカルLLMの色んなモデルの設定だったり、研究室メンバーが使用する生成AI環境の構築をしてきた中で、快適に動かせるモデルとそうではないモデルがあったので、知識整理も兼ねてローカルLLMの負荷要因についてまとめていきます。'
 ---
