--- a/data/blog/2025-05-01-get-dev-domain.mdx
+++ b/data/blog/2025-05-01-get-dev-domain.mdx
@@ -2,7 +2,7 @@
 title: 'ブログ用に Cloudflare Registrar で .dev ドメインを取得した'
 date: '2025-05-01'
 lastmod: '2025-05-01'
-tags: ['ブログ開発', 'ドメイン', 'Cloudflare']
+tags: ['インフラ', 'ブログ開発', 'Cloudflare', 'DNS']
 draft: false
 summary: '以前から自前ドメインのブログを公開したかったので、ブログを公開すると同時にdevドメインの取得を行いました。ドメイン取得と言えばお名前.comが有名ですがXではあまり評判が良くなかったので、色んな人が使用しているCloudflare Registrarを使用しました。'
 ---
