--- a/data/blog/2025-05-01-set-custom-domain.mdx
+++ b/data/blog/2025-05-01-set-custom-domain.mdx
@@ -2,7 +2,7 @@
 title: 'Cloudflare Registrar で GitHub Pages に独自ドメインを設定する'
 date: '2025-05-01'
 lastmod: '2025-05-01'
-tags: ['ブログ開発', 'ドメイン', 'Cloudflare', 'GitHub']
+tags: ['インフラ', 'ブログ開発', 'Cloudflare', 'GitHub', 'DNS']
 draft: false
 summary: 'ブログをGitHub Pagesで公開するにあたって自前のドメインは既に取得したので、本記事ではGitHub Pagesに割り当てる方法についてまとめていきます。レジストラはCloudflare Registrarでの解説になります。'
 ---
