--- a/data/blog/2025-05-02-learn-domain-setup.mdx
+++ b/data/blog/2025-05-02-learn-domain-setup.mdx
@@ -2,7 +2,7 @@
 title: 'GitHub Pages の独自ドメイン設定手順についての深掘り'
 date: '2025-05-01'
 lastmod: '2025-05-01'
-tags: ['ブログ開発', 'ドメイン', 'GitHub']
+tags: ['インフラ', 'ブログ開発', 'GitHub', 'DNS']
 draft: false
 summary: '前回までの記事でドメインを取得してGitHub Pagesに独自ドメインを設定しました。この記事では主に設定内容について疑問に感じた部分を深掘りして理解していきたいと思います。'
 ---
