--- a/data/blog/2025-05-02-learn-domain-setup.mdx
+++ b/data/blog/2025-05-02-learn-domain-setup.mdx
@@ -35,7 +35,7 @@ CNAMEレコードは「別名」を定義するレコードです。あるドメ
 
 このような例の場合、内部では2段階の名前解決が行われます。 まず`alias.example.com`の名前解決で`target.example.net`を取得、2段階目で`target.example.net`から具体的なIPアドレスを取得します。
 
-今回はwwwというサブドメインを「<GitHubユーザ名>.github.io」に結びつけています。
+今回はwwwというサブドメインを「(GitHubユーザ名).github.io」に結びつけています。
 
 設定内容
 ---
