--- a/data/blog/2025-05-02-learn-domain-setup.mdx
+++ b/data/blog/2025-05-02-learn-domain-setup.mdx
@@ -51,7 +51,7 @@ CNAMEレコードは「別名」を定義するレコードです。あるドメ
 
 | **タイプ** | **名前** | **ターゲット**             | **プロキシステータス** |
 | ---------- | -------- | -------------------------- | ---------------------- |
-| CNAME      | www      | <GitHubユーザ名>.github.io | DNS のみ               |
+| CNAME      | www      | (GitHubユーザ名).github.io | DNS のみ               |
 
 A レコード追加で感じた疑問
 ---
